force-app/main/default/objects/PTP_Information__c/PTP_Information__c.object-meta.xml
<CustomObject>
    <label>PTP Information</label>
    <nameField>
        <displayFormat>PTP-{000}</displayFormat>
        <label>PTP Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTP Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>