force-app/main/default/objects/PTP_Information__c/fields/PTP_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date__c</fullName>
    <label>Promise Date</label>
    <type>DateTime</type>
</CustomField>