force-app/main/default/objects/PTP_Information__c/fields/PTP_Mate__c.field-meta.xml
<CustomField>
    <fullName>PTP_Mate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promise Met</label>
    <type>Checkbox</type>
</CustomField>