force-app/main/default/objects/PTP_Information__c/fields/PTP_Method__c.field-meta.xml
<CustomField>
    <fullName>PTP_Method__c</fullName>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
            </value>
            <value>
                <fullName>branch</fullName>
            </value>
            <value>
                <fullName>cheque</fullName>
            </value>
            <value>
                <fullName>western union</fullName>
            </value>
            <value>
                <fullName>telepay</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>