force-app/main/default/objects/PTP_Information__c/fields/Source_of_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Arrangement__c</fullName>
    <label>Source of Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>